--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,25 @@
+        
+                    
+        <table align="center" style="margin-top: 10%;">
+            <tr style="margin-bottom:10px">
+                <td>
+                    <button routerLink="/admin/usertask" mat-raised-button color="primary">USER</button>
+                </td>
+                <td>
+                    <button routerLink="/admin/todo" mat-raised-button color="primary">ADMIN</button>
+                </td>
+            </tr>        
+        </table>
 
-<router-outlet></router-outlet>
+        <table align="center" style="margin-top: 2%;">
+            <tr>
+                
+                    <td>
+                        <router-outlet></router-outlet> 
+                    </td>
+                
+            </tr>
+        </table>
+
+        
+
