--- a/frontend/src/app/pages/login/login.component.css
+++ b/frontend/src/app/pages/login/login.component.css
@@ -1,16 +1,9 @@
 
+.full-width{
 
-html,
-body{
-    height: 100%;
+    width: 100%;
 }
 
-
-body{
-
-    margin: 0;
-    
-}
 .text-center{
     text-align: center;
 }
